[package]
name = "HtmlImgFixedSize"
version = "0.1.0"
edition = "2024"
authors = ["Maciej Lewandowski <dev@web-dream.tech>"]

[dependencies]
imageinfo = "0.7.27"
clap = { version = "4.5.53", features = ["derive"] }
progress_bar = "1.4.0"
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
kuchiki = "0.8.1"
